test/libhyperion/syntaxTests/structs/member_type_eq_name_3.hyp
contract C {
    enum E {a, b, c}
    struct S {function (E) external f; uint E;}
    struct T {function (E) external f; uint E;}
    struct U {function (E) external f;}
}
// ----
// TypeError 4888: (48-71): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
